samples/_failures_safe/1761333241_216391_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_33ef4430.c: In function ‘main’:
./samples/SAFE/__tmp_33ef4430.c:154:29: error: ‘heap’ undeclared (first use in this function)
  154 |     cleanup_log_collection(&heap
      |                             ^~~~
./samples/SAFE/__tmp_33ef4430.c:154:29: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_33ef4430.c:154:33: error: expected ‘)’ at end of input
  154 |     cleanup_log_collection(&heap
      |                           ~     ^
      |                                 )
./samples/SAFE/__tmp_33ef4430.c:154:5: error: expected declaration or statement at end of input
  154 |     cleanup_log_collection(&heap
      |     ^~~~~~~~~~~~~~~~~~~~~~
